@@ -1,16 +1,19 @@
 package com.anonymouschat.anonymouschatserver.config.jwt;
 
+import com.anonymouschat.anonymouschatserver.global.util.ResponseUtil;
+import io.jsonwebtoken.JwtException;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.lang.NonNull;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
@@ -28,13 +31,16 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
 		String token = resolveToken(request);
 
-		if (token != null && jwtTokenProvider.validateToken(token)) {
-			Long userId = jwtTokenProvider.getUserIdFromToken(token);
-
-			UsernamePasswordAuthenticationToken authentication =
-					new UsernamePasswordAuthenticationToken(userId, null, Collections.emptyList());
-
-			SecurityContextHolder.getContext().setAuthentication(authentication);
+		try {
+			if (token != null && jwtTokenProvider.validateToken(token)) {
+				Long userId = jwtTokenProvider.getUserIdFromToken(token);
+				Authentication auth = new UsernamePasswordAuthenticationToken(userId, null, List.of());
+				SecurityContextHolder.getContext().setAuthentication(auth);
+			}
+		} catch (JwtException e) {
+			SecurityContextHolder.clearContext();
+			ResponseUtil.writeUnauthorizedResponse(response, e.getMessage());
+			return; // 필수
 		}
 
 		filterChain.doFilter(request, response);
